--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ ul {
   width: 600px;
   margin: 0 auto;
   padding: 20px;
+  colour: blue;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #fff;
